--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# "
+    "# Let us start "
    ]
   },
   {
@@ -177,7 +177,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql --modele query_keywords_overlap\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
