--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -171,16 +171,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let us start checking the user experience "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%sql --module query_keywords_overlap\n",
+    "SELECT\n",
+    "  Criteria,\n",
+    "  KeywordMatchType,\n",
+    "  COUNT(AccountDescriptiveName) as NbOfAccounts,\n",
+    "  SUM(IF(Clicks > 0,1,0)) as NbOfAccountsWithClicks,\n",
+    "FROM\n",
+    "(\n",
+    "SELECT\n",
+    "  Criteria,\n",
+    "  KeywordMatchType,\n",
+    "  AccountDescriptiveName,\n",
+    "  IF(CriteriaDestinationUrl != ' --',CriteriaDestinationUrl,FinalUrls) as Urls,\n",
+    "  SUM(Clicks) as Clicks,\n",
+    "FROM\n",
+    " [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS]\n",
+    "WHERE True\n",
+    "AND  AdNetworkType2 = 'Google search' \n",
+    "AND NOT IsNegative \n",
+    "AND Status = 'enable' AND AdGroupStatus = 'enable' AND CampaignStatus = 'enable'\n",
+    "AND Year = 2016 \n",
+    "AND CriteriaDestinationUrl == '--'\n",
+    "GROUP BY 1,2,3,4,5,6,7\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%sql --modele query_keywords_overlap\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
