--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -260,7 +260,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql\n",
+    "SELECT\n",
+    " Month\n"
+   ]
   }
  ],
  "metadata": {
