--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -255,16 +255,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"7_146435926488\"><table><tr><th>Month</th></tr><tr><td>2016-04-01</td></tr></table></div>\n",
+       "    <br />(rows: 1, time: 5.3s,     8GB processed, job: job_NeBqLyiVB5J9ACf-uYXSbgxMXSk)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!7_146435926488', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"table\",\n",
+       "              dataName:\"5\",\n",
+       "              fields:\"Month\",\n",
+       "              totalRows:1,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"2016-04-01\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"Month\", \"label\": \"Month\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_NeBqLyiVB5J9ACf-uYXSbgxMXSk"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql\n",
+    "SELECT\n",
+    " Is\n",
+    "FROM\n",
+    "  [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS]\n",
+    "WHERE True\n",
+    "AND  AdNetworkType2 = 'Google search' AND Month = '2016-04-01'\n",
+    "GROUP BY 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%sql\n",
-    "SELECT\n",
-    " Month\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
