--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -197,9 +197,8 @@
     "WHERE True\n",
     "AND  AdNetworkType2 = 'Google search' \n",
     "AND NOT IsNegative \n",
-    "AND Status = 'enable' AND AdGroupStatus = 'enable' AND CampaignStatus = 'enable'\n",
+    "AND Status = 'enabled' AND AdGroupStatus = 'enabled' AND CampaignStatus = 'enabled'\n",
     "AND Month = '2016-04-01'\n",
-    "AND CriteriaDestinationUrl == '--'\n",
     "GROUP BY 1,2,3,4\n",
     ")\n",
     "GROUP BY 1,2"
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +243,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -264,29 +263,29 @@
      "data": {
       "text/html": [
        "\n",
-       "    <div class=\"bqtv\" id=\"7_146435926488\"><table><tr><th>Month</th></tr><tr><td>2016-04-01</td></tr></table></div>\n",
-       "    <br />(rows: 1, time: 5.3s,     8GB processed, job: job_NeBqLyiVB5J9ACf-uYXSbgxMXSk)<br />\n",
+       "    <div class=\"bqtv\" id=\"8_146435937420\"><table><tr><th>Status</th></tr><tr><td>removed</td></tr><tr><td>paused</td></tr><tr><td>enabled</td></tr></table></div>\n",
+       "    <br />(rows: 3, time: 2.9s,     2GB processed, job: job_A1cmPHUCP8hqwxMedVK9p02Vrjw)<br />\n",
        "    <script>\n",
-       "      require(['extensions/charting', 'element!7_146435926488', 'style!/static/extensions/charting.css'],\n",
+       "      require(['extensions/charting', 'element!8_146435937420', 'style!/static/extensions/charting.css'],\n",
        "        function(charts, dom) {\n",
        "          charts.render(dom,\n",
        "            {\n",
        "              chartStyle:\"table\",\n",
-       "              dataName:\"5\",\n",
-       "              fields:\"Month\",\n",
-       "              totalRows:1,\n",
+       "              dataName:\"6\",\n",
+       "              fields:\"Status\",\n",
+       "              totalRows:3,\n",
        "              rowsPerPage:25,\n",
-       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"2016-04-01\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"Month\", \"label\": \"Month\"}]});\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"removed\"}]}, {\"c\": [{\"v\": \"paused\"}]}, {\"c\": [{\"v\": \"enabled\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"Status\", \"label\": \"Status\"}]});\n",
        "        }\n",
        "      );\n",
        "    </script>\n",
        "  "
       ],
       "text/plain": [
-       "QueryResultsTable job_NeBqLyiVB5J9ACf-uYXSbgxMXSk"
+       "QueryResultsTable job_A1cmPHUCP8hqwxMedVK9p02Vrjw"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,11 +293,9 @@
    "source": [
     "%sql\n",
     "SELECT\n",
-    " Is\n",
+    "  Status,\n",
     "FROM\n",
-    "  [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS]\n",
-    "WHERE True\n",
-    "AND  AdNetworkType2 = 'Google search' AND Month = '2016-04-01'\n",
+    " [google.com:ddm-connectors-demo:aw_dataset.KEYWORDS_PERFORMANCE_ANALYTICS]\n",
     "GROUP BY 1"
    ]
   },
